syntax = "proto3";
package io.github.smyrgeorge.actor4k.proto;

service NodeService {
  rpc ask(Ask) returns (Response) {}
  rpc tell(Tell) returns (Response) {}
  rpc getActor(GetActor) returns (Response) {}
}

message Ask {
  string shard = 1;
  string actor_clazz = 2;
  string actor_key = 3;
  bytes payload = 4;
  string payload_class = 5;
}

message Tell {
  string shard = 1;
  string actor_clazz = 2;
  string actor_key = 3;
  bytes payload = 4;
  string payload_class = 5;
}

message GetActor {
  string shard = 1;
  string actor_clazz = 2;
  string actor_key = 3;
}

message Response {
  string shard = 1;
  bytes payload = 2;
  string payload_class = 3;
  bool error = 4;

  message Error {
    string code = 1;
    string message = 2;
  }
}
