syntax = "proto3";
package io.github.smyrgeorge.actor4k.proto;

service NodeService {
  rpc ping(Ping) returns (Pong) {}
  rpc ask(Ask) returns (Response) {}
  rpc tell(Tell) returns (Response) {}
  rpc spawn(Spawn) returns (ActorRef) {}
}

message Ping {
  string id = 1;
  string message = 2;
}

message Pong {
  string id = 1;
  string message = 2;
}

message Ask {
  string clazz = 1;
  string key = 2;
  bytes payload = 3;
  string payload_class = 4;
}

message Tell {
  string clazz = 1;
  string key = 2;
  bytes payload = 3;
  string payload_class = 4;
}

message Response {
  bytes payload = 1;
  string payload_class = 2;
}

message Spawn {
  string clazz = 1;
  string key = 2;
}

message ActorRef {
  string clazz = 1;
  string name = 2;
  string key = 3;
  string node = 4;
}